<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_mission"
    >
    <TextView
        android:id="@+id/mission_scroll_msg"
        android:background="@drawable/scroll_mission"
        android:layout_marginTop="80dp"
        android:text="@string/mission_scroll_msg"
        android:textSize="18sp"
        style="@style/scroll_text"
        />

    <RelativeLayout
        android:id="@+id/mission_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mission_scroll_msg"
        android:layout_marginTop="100dp">

        <Button
            android:id="@+id/btn_play_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:text="@string/mission_view_video"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/poor"
            android:textColor="@drawable/selector_textcolor_default_btn"
            android:background="@drawable/selector_btn_blank"/>

        <Button
            android:id="@+id/btn_mission_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/mission_guide"
            android:layout_marginEnd="80dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:fontFamily="@font/poor"
            android:textColor="@drawable/selector_textcolor_default_btn"
            android:background="@drawable/selector_btn_blank"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/mission_btn_layout"
        android:layout_marginTop="120dp"
        >
        <Button
            android:id="@+id/btn_sc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_logo_large_blank_btn"
            android:text="@string/mission_sc_btn"
            style="@style/popup.blank.xlarge.text"
            />
    </LinearLayout>



</RelativeLayout>