<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/blank_paper"
    >

    <TextView
        android:id="@+id/quiz_confirm_dialog_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/popup.textview"
        android:layout_marginTop="70dp"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_red_dark"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_dialog_confirm_msg"
        android:layout_centerInParent="true"
        style="@style/popup.textview"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_centerHorizontal="true"
        >
        <Button
            android:id="@+id/quiz_confirm_negative"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_normal_btn_blank"
            android:text="@string/quiz_dialog_submit_no"
            style="@style/popup.blank.btn"
            />
        <Button
            android:id="@+id/quiz_confirm_positive"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_normal_btn_blank"
            android:layout_marginStart="20dp"
            style="@style/popup.blank.btn"
            android:text="@string/quiz_dialog_submit_yes"
            />
    </LinearLayout>
</RelativeLayout>